Fix flickering

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ header {
 /* Main */
 
 .row .col {
-    width: calc(100% / 4 - 20px);
+    width: calc(100% / 4 - 10px);
     height: 300px;
     background-color: white;
     border-radius: 10px;
@@ -64,7 +64,7 @@ header {
     z-index: 1;
 }
 
-.overlay:hover {
+.col:hover .overlay{
     visibility: hidden;
 }
 
